--- a/app_foodtruck/package.json
+++ b/app_foodtruck/package.json
@@ -16,7 +16,8 @@
     "cordova-android": "^8.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-fcm-with-dependecy-updated": "^2.4.0",
-    "cordova-plugin-firebase-realtime-database": "0.0.2"
+    "cordova-plugin-firebase-realtime-database": "0.0.2",
+    "cordova-plugin-sim": "^1.3.3"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.3",
@@ -25,7 +26,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-fcm-with-dependecy-updated": {}
+      "cordova-plugin-fcm-with-dependecy-updated": {},
+      "cordova-plugin-sim": {}
     },
     "platforms": [
       "browser",
