--- a/app_foodtruck/platforms/android/app/src/main/AndroidManifest.xml
+++ b/app_foodtruck/platforms/android/app/src/main/AndroidManifest.xml
@@ -27,4 +27,5 @@
         </service>
     </application>
     <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 </manifest>
